gcc/testsuite/rust/compile/empty_union.rs
#[repr(C)]
union MyUnion {} // { dg-error "unions cannot have zero fields" }
